--- a/src/pages/cs2/about.astro
+++ b/src/pages/cs2/about.astro
@@ -10,9 +10,7 @@ const title = 'About - Cities Skylines Modding';
 	<section class="pt-12 pb-48 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
 		<div class="content">
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="about">
-				<a
-					href="#about"
-					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+				<a href="#about" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
 					>About</a
 				>
 			</h2>
@@ -27,13 +25,11 @@ const title = 'About - Cities Skylines Modding';
 				/>
 			</p>
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="credits">
-				<a
-					href="#credits"
-					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+				<a href="#credits" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
 					>Credits</a
 				>
 			</h2>
-			<p class="mt-4">Original Design, development, CS I content: Ronyx69</p>
+			<p class="mt-4">Original design, development, CS I content: Ronyx69</p>
 			<p class="mt-4">Website remake, development, CS II content: ComradeIntense</p>
 			<p class="mt-4">Development help: Cozonaq, Egi, boformer, Quboid, whitemsv</p>
 			<p class="mt-4">Home page icons: Hadece</p>
@@ -41,18 +37,12 @@ const title = 'About - Cities Skylines Modding';
 				Search: <Link classes="" href="https://pagefind.app/" text="PageFind" theme="externallink" />
 			</p>
 			<p class="mt-4">
-				Syntax Highlighting: <Link
-					classes=""
-					href="https://highlightjs.org/"
-					text="highlight.js"
-					theme="externallink"
-				/>
+				Syntax Highlighting: <Link classes="" href="https://highlightjs.org/" text="highlight.js" theme="externallink" />
 			</p>
 			<p class="mt-4">Output Log Decrufter: aubergine18</p>
 			<p class="mt-4">
-				Feedback and corrections: Cozonaq, Lost Gecko, Geze, hemeac, mntoes, Simon Royer, Tim The Terrible,
-				Badi_Dea, Bento Gambin, GiometryE, BoldlyBuilding, sebnichols, Armesto, boformer, aubergine18,
-				kian.zarrin
+				Feedback and corrections: Cozonaq, Lost Gecko, Geze, hemeac, mntoes, Simon Royer, Tim The Terrible, Badi_Dea, Bento Gambin,
+				GiometryE, BoldlyBuilding, sebnichols, Armesto, boformer, aubergine18, kian.zarrin
 			</p>
 		</div>
 	</section>
