--- a/src/pages/asset/building.astro
+++ b/src/pages/asset/building.astro
@@ -45,7 +45,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 				<p class="text-lg mt-4 text-hit-gray-500">The absolute limit for a mesh is 65536 vertices.</p>
 			</div>
 			<!-- ?right -->
-			<div class="flex flex-col gap-1 lg:w-1/3">
+			<div class="lg:w-1/3">
 				<a href="/images/asset/building/tris.jpg" target="_blank">
 					<Picture
 						src={images.tris}
@@ -101,7 +101,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 				</p>
 			</div>
 			<!-- ?right -->
-			<div class="flex flex-col gap-1 lg:w-1/3">
+			<div class="lg:w-1/3">
 				<a href="/images/asset/building/lodmesh.jpg" target="_blank">
 					<Picture
 						src={images.lodmesh}
@@ -127,7 +127,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 				For the main mesh, you are allowed to UV map outside the 0-1 area (main tile), so you can tile the entire texture multiple
 				times on a single face.
 			</p>
-			<div class="flex flex-col gap-1 lg:w-1/3">
+			<div class="lg:w-1/3">
 				<a href="/images/asset/building/uv_main.jpg" target="_blank"
 					><Picture
 						src={images.uv_main}
