--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -17,7 +17,7 @@ const { description = 'Cities Skylines Modding & Asset Creation', title = 'Citie
 		<link rel="preload" href="/fonts/open-sans-v36-latin-700.woff2" as="font" type="font/woff2" crossorigin />
 		<link rel="preload" href="/fonts/open-sans-v36-latin-800.woff2" as="font" type="font/woff2" crossorigin />
 		<link href="/pagefind/pagefind-ui.css" rel="stylesheet" />
-		<script src="/pagefind/pagefind-ui.js" is:inline></script>
+		<script type="text/partytown" async src="/pagefind/pagefind-ui.js" is:inline></script>
 		<title>{title}</title>
 	</head>
 	<body class="bg-darkbg container">
