updated sidebar id

--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<aside id="separator-sidebar" class="fixed top-0 right-0 z-40 w-64 h-screen transition-transform translate-x-0 hidden xl:block" aria-label="Sidebar">
+<aside id="toc" class="fixed top-0 right-0 z-40 w-64 h-screen transition-transform translate-x-0 hidden xl:block" aria-label="Sidebar">
 	<!-- !sidebar -->
 	<div class="h-full px-6 pb-4 pt-4 overflow-y-auto bg-lightbg">
 		<nav role="navigation" class="table-of-contents">
