added textures page for cs2

--- a/src/components/SidebarCS2.astro
+++ b/src/components/SidebarCS2.astro
@@ -4,7 +4,7 @@ const sidebarItems = [
 		category: 'ASSET CREATION',
 		items: [
 			{ name: 'Building', href: '/asset/building/' },
-			{ name: 'Prop', href: '/asset/prop/' },
+			{ name: 'Textures', href: '/cs2/textures' },
 		],
 	},
 	{
