--- a/src/components/SidebarCS2.astro
+++ b/src/components/SidebarCS2.astro
@@ -2,10 +2,7 @@
 const sidebarItems = [
 	{
 		category: 'ASSET CREATION',
-		items: [
-			{ name: 'Building', href: '/asset/building/' },
-			{ name: 'Textures', href: '/cs2/textures' },
-		],
+		items: [{ name: 'Textures', href: '/cs2/textures' }],
 	},
 	{
 		category: 'OTHER',
