--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,5 +1,6 @@
 ---
 import '../styles/globals.css';
+import Posthog from '../components/posthog.astro';
 import Sidebar from '../components/Sidebar.astro';
 const { description = 'Cities Skylines Modding & Asset Creation', title = 'Cities Skylines Modding & Asset Creation' } = Astro.props;
 ---
