--- a/src/layouts/MainLayoutCS2.astro
+++ b/src/layouts/MainLayoutCS2.astro
@@ -1,5 +1,6 @@
 ---
 import '../styles/globals.css';
+import Posthog from '../components/posthog.astro';
 import SidebarCS2 from '../components/SidebarCS2.astro';
 const { description = 'Cities Skylines Modding & Asset Creation', title = 'Cities Skylines Modding & Asset Creation' } = Astro.props;
 ---
