updated about pages

--- a/src/pages/cs2/about.astro
+++ b/src/pages/cs2/about.astro
@@ -19,8 +19,8 @@ const title = 'About - Cities Skylines Modding';
 			<p class="mt-4">
 				<Link
 					classes=""
-					href="https://github.com/ronyx69/cslmodding"
-					text="This website is hosted on GitHub Pages, the repository can be viewed here."
+					href="https://github.com/comradeintense/cslmodding"
+					text="This website is hosted on GitHub, the repository can be viewed here."
 					theme="externallink"
 				/>
 			</p>
