--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,6 +1,6 @@
 ---
 import '../styles/globals.css';
-import Posthog from '../components/posthog.astro';
+import PostHog from '../components/posthog.astro';
 import Sidebar from '../components/Sidebar.astro';
 const { description = 'Cities Skylines Modding & Asset Creation', title = 'Cities Skylines Modding & Asset Creation' } = Astro.props;
 ---
@@ -19,6 +19,7 @@ const { description = 'Cities Skylines Modding & Asset Creation', title = 'Citie
 		<link rel="preload" href="/fonts/open-sans-v36-latin-800.woff2" as="font" type="font/woff2" crossorigin />
 
 		<title>{title}</title>
+		<PostHog />
 	</head>
 	<body class="bg-darkbg container">
 		<Sidebar />
