fixed index cs2

--- a/src/pages/cs2/index.astro
+++ b/src/pages/cs2/index.astro
@@ -4,7 +4,7 @@ import { Icon } from 'astro-icon';
 
 const itemlinks = [
 	{
-		href: '/textures/',
+		href: '/cs2/textures',
 		title: 'Textures',
 		description: 'The basics of texture creation',
 		svgname: 'icon_Textures',
